--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
